Fixed position of menu overlay on iPhone X

--- a/css/menu.css
+++ b/css/menu.css
@@ -176,6 +176,8 @@
   left: 10px;
   right: 10px;
   bottom: 10px;
+  bottom: constant(safe-area-inset-bottom);
+  bottom: env(safe-area-inset-bottom);
   top: 10px;
   background: #fff;
   -webkit-transition: -webkit-transform 0.2s ease-out, opacity 0.2s linear;
